[gd_scene load_steps=6 format=3 uid="uid://5u3qfqwi838i"]

[ext_resource type="Script" path="res://script/player_suffel.gd" id="1_cc4lr"]
[ext_resource type="Texture2D" uid="uid://ctqfscp1vchg4" path="res://assets/card_backside.jpeg" id="2_784wb"]
[ext_resource type="Script" path="res://script/card_move.gd" id="2_qwjn5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cfb5c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_typsm"]
size = Vector2(77.6179, 17.5303)

[node name="player_area" type="Area2D"]
position = Vector2(482, 666)
script = ExtResource("1_cc4lr")

[node name="card_show" type="Timer" parent="."]
wait_time = 3.7
one_shot = true

[node name="card_suffle" type="Area2D" parent="."]
z_index = -1
position = Vector2(0, -330)
scale = Vector2(0.0684037, 0.0766994)

[node name="card1" type="Area2D" parent="card_suffle"]
script = ExtResource("2_qwjn5")

[node name="card1_sprite" type="Sprite2D" parent="card_suffle/card1"]
texture = ExtResource("2_784wb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="card_suffle/card1"]
position = Vector2(-14.6191, 26.0757)
scale = Vector2(37.4687, 52.1448)
shape = SubResource("RectangleShape2D_cfb5c")

[node name="card2" type="Area2D" parent="card_suffle"]
script = ExtResource("2_qwjn5")

[node name="card2_sprite" type="Sprite2D" parent="card_suffle/card2"]
texture = ExtResource("2_784wb")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="card_suffle/card2"]
scale = Vector2(37.4687, 52.1448)
shape = SubResource("RectangleShape2D_cfb5c")

[node name="card3" type="Area2D" parent="card_suffle"]
script = ExtResource("2_qwjn5")

[node name="card3_sprite" type="Sprite2D" parent="card_suffle/card3"]
texture = ExtResource("2_784wb")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="card_suffle/card3"]
scale = Vector2(37.4687, 52.1448)
shape = SubResource("RectangleShape2D_cfb5c")

[node name="card4" type="Area2D" parent="card_suffle"]
script = ExtResource("2_qwjn5")

[node name="card4_sprite" type="Sprite2D" parent="card_suffle/card4"]
texture = ExtResource("2_784wb")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="card_suffle/card4"]
scale = Vector2(37.4687, 52.1448)
shape = SubResource("RectangleShape2D_cfb5c")

[node name="card5" type="Area2D" parent="card_suffle"]
script = ExtResource("2_qwjn5")

[node name="card5_sprite" type="Sprite2D" parent="card_suffle/card5"]
texture = ExtResource("2_784wb")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="card_suffle/card5"]
scale = Vector2(37.4687, 52.1448)
shape = SubResource("RectangleShape2D_cfb5c")

[node name="card6" type="Area2D" parent="card_suffle"]
position = Vector2(0, 13.0376)
script = ExtResource("2_qwjn5")

[node name="card6_sprite" type="Sprite2D" parent="card_suffle/card6"]
texture = ExtResource("2_784wb")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="card_suffle/card6"]
position = Vector2(0, -13.0376)
scale = Vector2(37.4687, 52.1448)
shape = SubResource("RectangleShape2D_cfb5c")

[node name="card7" type="Area2D" parent="card_suffle"]
script = ExtResource("2_qwjn5")

[node name="card7_sprite" type="Sprite2D" parent="card_suffle/card7"]
texture = ExtResource("2_784wb")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="card_suffle/card7"]
scale = Vector2(37.4687, 52.1448)
shape = SubResource("RectangleShape2D_cfb5c")

[node name="card8" type="Area2D" parent="card_suffle"]
script = ExtResource("2_qwjn5")

[node name="card8_sprite" type="Sprite2D" parent="card_suffle/card8"]
texture = ExtResource("2_784wb")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="card_suffle/card8"]
scale = Vector2(37.4687, 52.1448)
shape = SubResource("RectangleShape2D_cfb5c")

[node name="card9" type="Area2D" parent="card_suffle"]
script = ExtResource("2_qwjn5")

[node name="card9_sprite" type="Sprite2D" parent="card_suffle/card9"]
texture = ExtResource("2_784wb")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="card_suffle/card9"]
scale = Vector2(37.4687, 52.1448)
shape = SubResource("RectangleShape2D_cfb5c")

[node name="card10" type="Area2D" parent="card_suffle"]
script = ExtResource("2_qwjn5")

[node name="card10_sprite" type="Sprite2D" parent="card_suffle/card10"]
texture = ExtResource("2_784wb")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="card_suffle/card10"]
scale = Vector2(37.4687, 52.1448)
shape = SubResource("RectangleShape2D_cfb5c")

[node name="card11" type="Area2D" parent="card_suffle"]
script = ExtResource("2_qwjn5")

[node name="card11_sprite" type="Sprite2D" parent="card_suffle/card11"]
texture = ExtResource("2_784wb")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="card_suffle/card11"]
scale = Vector2(37.4687, 52.1448)
shape = SubResource("RectangleShape2D_cfb5c")

[node name="card12" type="Area2D" parent="card_suffle"]
script = ExtResource("2_qwjn5")

[node name="card12_sprite" type="Sprite2D" parent="card_suffle/card12"]
texture = ExtResource("2_784wb")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="card_suffle/card12"]
scale = Vector2(37.4687, 52.1448)
shape = SubResource("RectangleShape2D_cfb5c")

[node name="card13" type="Area2D" parent="card_suffle"]
script = ExtResource("2_qwjn5")

[node name="card13_sprite" type="Sprite2D" parent="card_suffle/card13"]
texture = ExtResource("2_784wb")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="card_suffle/card13"]
scale = Vector2(37.4687, 52.1448)
shape = SubResource("RectangleShape2D_cfb5c")

[node name="turn_over" type="Timer" parent="card_suffle"]
wait_time = 1.12
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 1)
scale = Vector2(9.59784, 6.20512)
shape = SubResource("RectangleShape2D_typsm")

[node name="lbl_bid" type="Label" parent="."]
offset_left = 256.0
offset_top = 105.0
offset_right = 343.0
offset_bottom = 128.0
text = "Score/Bid : "

[node name="render_time" type="Timer" parent="."]
wait_time = 2.019
one_shot = true

[node name="ai_move" type="Timer" parent="."]
wait_time = 0.849
one_shot = true

[node name="player_move" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="card_show" to="." method="_on_timer_timeout"]
[connection signal="input_event" from="card_suffle/card1" to="card_suffle/card1" method="_on_input_event"]
[connection signal="mouse_entered" from="card_suffle/card1" to="card_suffle/card1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="card_suffle/card1" to="card_suffle/card1" method="_on_mouse_exited"]
[connection signal="input_event" from="card_suffle/card2" to="card_suffle/card2" method="_on_input_event"]
[connection signal="mouse_entered" from="card_suffle/card2" to="card_suffle/card2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="card_suffle/card2" to="card_suffle/card2" method="_on_mouse_exited"]
[connection signal="input_event" from="card_suffle/card3" to="card_suffle/card3" method="_on_input_event"]
[connection signal="mouse_entered" from="card_suffle/card3" to="card_suffle/card3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="card_suffle/card3" to="card_suffle/card3" method="_on_mouse_exited"]
[connection signal="input_event" from="card_suffle/card4" to="card_suffle/card4" method="_on_input_event"]
[connection signal="mouse_entered" from="card_suffle/card4" to="card_suffle/card4" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="card_suffle/card4" to="card_suffle/card4" method="_on_mouse_exited"]
[connection signal="input_event" from="card_suffle/card5" to="card_suffle/card5" method="_on_input_event"]
[connection signal="mouse_entered" from="card_suffle/card5" to="card_suffle/card5" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="card_suffle/card5" to="card_suffle/card5" method="_on_mouse_exited"]
[connection signal="input_event" from="card_suffle/card6" to="card_suffle/card6" method="_on_input_event"]
[connection signal="mouse_entered" from="card_suffle/card6" to="card_suffle/card6" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="card_suffle/card6" to="card_suffle/card6" method="_on_mouse_exited"]
[connection signal="input_event" from="card_suffle/card7" to="card_suffle/card7" method="_on_input_event"]
[connection signal="mouse_entered" from="card_suffle/card7" to="card_suffle/card7" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="card_suffle/card7" to="card_suffle/card7" method="_on_mouse_exited"]
[connection signal="input_event" from="card_suffle/card8" to="card_suffle/card8" method="_on_input_event"]
[connection signal="mouse_entered" from="card_suffle/card8" to="card_suffle/card8" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="card_suffle/card8" to="card_suffle/card8" method="_on_mouse_exited"]
[connection signal="input_event" from="card_suffle/card9" to="card_suffle/card9" method="_on_input_event"]
[connection signal="mouse_entered" from="card_suffle/card9" to="card_suffle/card9" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="card_suffle/card9" to="card_suffle/card9" method="_on_mouse_exited"]
[connection signal="input_event" from="card_suffle/card10" to="card_suffle/card10" method="_on_input_event"]
[connection signal="mouse_entered" from="card_suffle/card10" to="card_suffle/card10" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="card_suffle/card10" to="card_suffle/card10" method="_on_mouse_exited"]
[connection signal="input_event" from="card_suffle/card11" to="card_suffle/card11" method="_on_input_event"]
[connection signal="mouse_entered" from="card_suffle/card11" to="card_suffle/card11" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="card_suffle/card11" to="card_suffle/card11" method="_on_mouse_exited"]
[connection signal="input_event" from="card_suffle/card12" to="card_suffle/card12" method="_on_input_event"]
[connection signal="mouse_entered" from="card_suffle/card12" to="card_suffle/card12" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="card_suffle/card12" to="card_suffle/card12" method="_on_mouse_exited"]
[connection signal="input_event" from="card_suffle/card13" to="card_suffle/card13" method="_on_input_event"]
[connection signal="mouse_entered" from="card_suffle/card13" to="card_suffle/card13" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="card_suffle/card13" to="card_suffle/card13" method="_on_mouse_exited"]
[connection signal="timeout" from="card_suffle/turn_over" to="card_suffle/card1" method="_on_turn_over_timeout"]
[connection signal="timeout" from="render_time" to="card_suffle/card1" method="_on_render_time_timeout"]
[connection signal="timeout" from="ai_move" to="card_suffle/card1" method="_on_ai_move_timeout"]
[connection signal="timeout" from="player_move" to="card_suffle/card1" method="_on_player_move_timeout"]
